# personal-context

./: .gitignore  README.md  pyproject.toml  server.py
context/: communication.md  expertise.md  identity.md  opinions.md  projects.md  writing-style.md
docs/plans/: 2026-04-06-personal-context-system.md
docs/specs/: 2026-04-06-personal-context-system-design.md
scripts/: ingest.py
sources/: blogs
tests/: test_ingest.py  test_server.py
