[project]
name = "personal-context"
version = "0.1.0"
description = "Personal context system for LLM writing assistance"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = []
